fix:完成打卡获取金币改为全部完成才加金币 feat:获取某一天的打卡情况api
