# docs/swagger.json
@@ -361,7 +361,6 @@
         },
         "/punch": {
             "get": {
-                "description": "获取我的打卡（标签）",
                 "consumes": [
                     "application/json"
                 ],
@@ -371,7 +370,7 @@
                 "tags": [
                     "punch"
                 ],
-                "summary": "我的打卡",
+                "summary": "获取用户某天的打卡",
                 "parameters": [
                     {
                         "type": "string",
@@ -379,6 +378,15 @@
                         "name": "token",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "天数",
+                        "name": "day",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Day"
+                        }
                     }
                 ],
                 "responses": {
@@ -426,12 +434,12 @@
                         "required": true
                     },
                     {
-                        "description": "卡的Title和完成本次打卡得到的金币数",
-                        "name": "title_and_gold",
+                        "description": "卡的Title",
+                        "name": "title",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.TitleAndGold"
+                            "$ref": "#/definitions/model.Title"
                         }
                     }
                 ],
@@ -1117,6 +1125,14 @@
                 }
             }
         },
+        "model.Day": {
+            "type": "object",
+            "properties": {
+                "day": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.GoldHistory": {
             "type": "object",
             "properties": {
@@ -1168,6 +1184,9 @@
         "model.Punch": {
             "type": "object",
             "properties": {
+                "id": {
+                    "type": "integer"
+                },
                 "number": {
                     "type": "integer"
                 },
@@ -1198,17 +1217,6 @@
         "model.Title": {
             "type": "object",
             "properties": {
-                "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.TitleAndGold": {
-            "type": "object",
-            "properties": {
-                "gold": {
-                    "type": "integer"
-                },
                 "title": {
                     "type": "string"
                 }
